# semantic-search-newsgroups

./: .gitignore  README.md  build_vector_db.py  clustering.py  main.py  pyproject.toml  semantic_cache.py
backend/: .gitattributes  .gitignore  Dockerfile  README.md  build_vector_db.py  fuzzy_clustering.py  main.py  pyproject.toml  semantic_cache.py  test_query.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  DocumentPage.tsx  SearchPage.tsx  main.tsx  types.ts
